--- a/Final Project/MoulinRouge.html
+++ b/Final Project/MoulinRouge.html
@@ -30,7 +30,7 @@
                 var img = data[key][i].img;
                 var bio = data[key][i].bio;
                 var card = document.createElement('data1');
-                var actorID = trim(actor)
+                var actorID = trim(actor);
                 
                 card.innerHTML =
                   '<div class="flex-container">' +
