--- a/Final Project/Jagged.html
+++ b/Final Project/Jagged.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/html" src="./js/jagged.js"></script>
+    <script type="text/html" src="js/jagged.js"></script>
      </head>
 
 <body class="body" onload="myFun();">
